Bug 23312 - [4.0/4.1 Regression] ACATS ICE (32) gimplify_one_sizepos, at gimplify.c:4659
Summary: [4.0/4.1 Regression] ACATS ICE (32) gimplify_one_sizepos, at gimplify.c:4659
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.1.0
: P2 normal
Target Milestone: 4.0.2
Assignee: Richard Henderson
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2005-08-10 10:26 UTC by Laurent GUERBY
Modified: 2005-08-11 22:23 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work: 4.0.0
Known to fail: 4.1.0
Last reconfirmed: 2005-08-11 17:15:58


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent GUERBY 2005-08-10 10:26:49 UTC
32 similar ICEs appeared on x86 and x86_64 between:

LAST_UPDATED: Sat Aug  6 15:29:38 UTC 2005
LAST_UPDATED: Tue Aug  9 20:10:22 UTC 2005

+===========================GNAT BUG DETECTED==============================+
| 4.1.0 20050809 (experimental) (x86_64-unknown-linux-gnu) GCC error:      |
| tree check: expected integer_type, have enumeral_type in                 |
|    gimplify_one_sizepos, at gimplify.c:4659                              |
...
Comment 1 Laurent GUERBY 2005-08-10 10:29:03 UTC
Forgot the list:

a54b02a c32001a c34001a c34001c c34001d
c34001f c34011b c35003a c35003b c35502b
c35502p c35508a c35508b c35508e c35508g
c35508l c35508o c35508p c36104b c37005a
c43215a c43215b c433001 c45242b c55b15a
c64104k c64105c c95008a c95085k c95086c
Comment 2 Laurent GUERBY 2005-08-10 10:29:27 UTC
cc3601a cxacb01
Comment 3 Andrew Pinski 2005-08-10 10:33:17 UTC
I think this was caused by:
2005-08-08  Richard Henderson  <rth@redhat.com>

        PR 22439
        * gimplify.c (gimplify_one_sizepos): Preserve the original type.

Which means it is also on the 4.0 branch too.
Comment 4 Laurent GUERBY 2005-08-10 17:35:47 UTC
On 4.0 x86 and x86_64, we also have the 32 4.1 ICE:

a54b02a c32001a c34001a c34001c c34001d
c34001f c34011b c35003a c35003b c35502b
c35502p c35508a c35508b c35508e c35508g
c35508l c35508o c35508p c36104a c37005a 
c43215a c43215b c433001 c45242b c55b15a 
c64104k c64105c c95008a c95085k c95086c 
cc3601a cxacb01

But we have an additional four of the same ICE:

c36104b c46041a c46042a c87b14c

Total 36 ICE.
Comment 5 GCC Commits 2005-08-11 17:12:38 UTC
Subject: Bug 23312

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	rth@gcc.gnu.org	2005-08-11 17:12:31

Modified files:
	gcc            : ChangeLog gimplify.c 

Log message:
	PR middle-end/23312
	* gimplify.c (gimplify_one_sizepos): Check for INTEGER_TYPE
	before using TYPE_IS_SIZETYPE.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.9705&r2=2.9706
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/gimplify.c.diff?cvsroot=gcc&r1=2.144&r2=2.145

Comment 6 Richard Henderson 2005-08-11 17:16:16 UTC
Fixed.
Comment 7 GCC Commits 2005-08-11 21:02:07 UTC
Subject: Bug 23312

CVSROOT:	/cvs/gcc
Module name:	gcc
Branch: 	gcc-4_0-branch
Changes by:	rth@gcc.gnu.org	2005-08-11 21:02:00

Modified files:
	gcc            : ChangeLog gimplify.c 

Log message:
	PR middle-end/23312
	* gimplify.c (gimplify_one_sizepos): Check for INTEGER_TYPE
	before using TYPE_IS_SIZETYPE.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&only_with_tag=gcc-4_0-branch&r1=2.7592.2.363&r2=2.7592.2.364
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/gimplify.c.diff?cvsroot=gcc&only_with_tag=gcc-4_0-branch&r1=2.113.2.9&r2=2.113.2.10