re PR middle-end/23312 (ACATS ICE (32) gimplify_one_sizepos, at gimplify.c:4659)

PR middle-end/23312
        * gimplify.c (gimplify_one_sizepos): Check for INTEGER_TYPE
        before using TYPE_IS_SIZETYPE.

From-SVN: r103000